# DescriptorMap

./: .readthedocs.yml  LICENSE  LICENSE.md  README.md  README.rst  pyproject.toml  setup.py
descmap/: analysis.py  analysis_geometric.py  errors.py  io.py  job.py  sampling.py  selection.py  setup.py
descmap/analysis/: chemkin.py  openmkm.py  plot.py
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/api/: analysis.rst  analysis_geometric.rst  errors.rst  io.rst  job.rst  sampling.rst  selection.rst  setup.rst
docs/api/analysis/: chemkin.rst  openmkm.rst  plot.rst
docs/etc/: about.rst  acknowledgements.rst
docs/user/: installation.rst  introduction.rst  overview.rst
example/complete_methane_oxidation_20_descriptors/: main.py
example/complete_methane_oxidation_20_descriptors/CH4_Order/: job_summary.xlsx
example/complete_methane_oxidation_20_descriptors/CH4_Order/analysis/: geometric_analysis.py  rxn_order.html
example/complete_methane_oxidation_20_descriptors/CH4_Order/templates/: JA_mkm.qs  setup.py
example/complete_methane_oxidation_20_descriptors/Eapp/: inputs.xlsx  job_summary.xlsx
example/complete_methane_oxidation_20_descriptors/Eapp/analysis/: Eapp.html  geometric_analysis.py
example/complete_methane_oxidation_20_descriptors/Eapp/templates/: setup.py  tube.inp
example/complete_methane_oxidation_20_descriptors/Model/: job_summary.xlsx  outputs.xlsx
example/complete_methane_oxidation_20_descriptors/O2_Order/: job_summary.xlsx
example/complete_methane_oxidation_20_descriptors/templates/: analysis.py  analysis.qs  setup.py  tube_COV.inp
example/streamline_C2H6_linear_225_CCH3_CC/: inputs.xlsx  main.py
example/streamline_C2H6_linear_225_CCH3_CC/templates/: JA_omkm.qs  analysis.py  analysis.qs  setup.py  setup.qs
example/streamline_C2H6_linear_400_H_test/: inputs.xlsx  main.py
example/streamline_C2H6_linear_400_H_test/templates/: JA_omkm.qs  analysis.py  analysis.qs  setup.py  setup.qs
(+22 files in other folders)
