[tool.poetry]
name = "descmap"
version = "0.1.0"
description = "Automatic feature selection and volcano curve generation."
authors = ["Jonathon Lym", "Xue Zong"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"